# audio-play

./: .gitignore  audio.py  audio_processor.py  default_params.py  future_plans.md  main.py  pyproject.toml  requirements.txt
docs/: future_plans.md
notebooks/: note1.ipynb  requirements.txt
src/sound/: audio_processor.py  notepad  stream.py
src/sound/tests/: audio_processor_test.py  default_params.py  stream_test.py
src/sound/utils/: DefaultSetupAudio.py  default_values.py  toggle_switch.py
src/visual/utils/: DefaultSetupVisual.py  freq2hex-notes.md  freq2hex.py  stack.py
src/visuals/: Color.py  animate.py  canvas.py
src/visuals/tests/: test_animate.py
src/visuals/utils/: Color.py  DefaultSetupVisuals.py  plot_pitch.py
src/visuals/utils/tests/: test_color.py
tests/: audio_processor_test.py  testing.md
tests/sound_tests/: stream_test.py
