[project]
name = "live-audio"
version = "0.1.0"
description = "Live audio manipulation package"
authors = [
    {name = "Ray Brien"}
    ]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"