[project]
name = "live-audio"
version = "0.1.0"
description = "Live audio manipulation package"
authors = [
    {name = "Ray Brien"}
    ]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["cffi (==1.17.1)", "contourpy (==1.3.0)", "matplotlib (==3.9.3)", "numpy (==2.0.2)", "packaging (==24.2)", "pillow (==11.0.0)", "pytest (==8.3.4)", "pytest-cov (==6.0.0)", "pytest-mock (==3.14.0)", "python-dateutil (==2.9.0.post0)", "sounddevice (==0.5.1)", "scipy (>=1.15.1,<2.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"